show 2 speakers name if there are only 2 and format strings properly

--- a/app/src/main/res/layout/item_session.xml
+++ b/app/src/main/res/layout/item_session.xml
@@ -38,6 +38,7 @@
             android:textColor="@color/list_item_subtext"
             android:textSize="@dimen/medium_text_size"
             android:ellipsize="end"
+            android:maxLines="1"
             tools:text="Joe Speaker and 2 others" />
     </LinearLayout>
 
