--- a/app/src/main/res/layout/item_session_by_speaker.xml
+++ b/app/src/main/res/layout/item_session_by_speaker.xml
@@ -3,20 +3,20 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/white"
+    android:background="?attr/selectableItemBackground"
     android:minHeight="@dimen/list_item_default_height"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/item_session"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginBottom="@dimen/default_padding"
         android:layout_marginLeft="@dimen/default_padding"
         android:layout_marginStart="@dimen/default_padding"
         android:ellipsize="end"
-        android:maxLines="2"
+        android:maxLines="1"
         android:textColor="@color/list_item_text"
         android:textSize="@dimen/default_text_size" />
 </RelativeLayout>
