move some dimens of card to dimens.xml

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,6 +19,7 @@
 
     <!-- Cards -->
     <dimen name="card_margin">5dp</dimen>
+    <dimen name="card_top_padding">24dp</dimen>
 
     <!-- Text sizes -->
     <dimen name="wc_date_title_text">12sp</dimen>
