--- a/app/src/main/res/layout/activity_speaker_detail.xml
+++ b/app/src/main/res/layout/activity_speaker_detail.xml
@@ -93,7 +93,7 @@
             </android.support.v7.widget.CardView>
 
             <TextView
-                android:text="Sessions"
+                android:text="@string/title_sessions"
                 android:layout_margin="@dimen/default_padding"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:layout_width="wrap_content"
