--- a/app/src/main/res/layout/activity_speaker_detail.xml
+++ b/app/src/main/res/layout/activity_speaker_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
@@ -8,6 +8,7 @@
     <include layout="@layout/toolbar"/>
 
     <LinearLayout
+        android:layout_marginTop="?attr/actionBarSize"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical">
@@ -36,4 +37,4 @@
             android:clickable="true"
             android:padding="?attr/actionBarSize" />
     </RelativeLayout>
-</LinearLayout>
+</RelativeLayout>
