--- a/app/src/main/res/layout/item_wordcamp.xml
+++ b/app/src/main/res/layout/item_wordcamp.xml
@@ -4,7 +4,7 @@
     android:id="@+id/layoutContainer"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@android:color/white"
     android:padding="@dimen/list_item_padding">
 
